Changes from jTDS 1.2.5
=======================

10/07/2010 - Holger Rehn
 o Corrected bug [3078236], exception chaining time grows exponentially with
   number of exceptions in chain.
 o Corrected bug [3081749], SSPIJNIClient.getInstance() isn't thread-safe.
 o Corrected a bug in JtdsStatement.close(), any RuntimeException would have
   masked a prior SQLException.
 o Improved fix for bug [2931326], Statement.close() cannot throw NPE anymore.

05/17/2010 - Holger Rehn
 o Corrected bug [2931326], NPE if Statement.close() is called by multiple
   threads concurrently.
 o Applied fix for bug [3002431] by Rainer Schwarze, improved handling of port
   discovery errors.
 o Improved error messages if a value cannot be converted to a given SQL type.
 o Corrected bug [3000472], TimerThread started when closing last connection.
 o Fixed method synchronization in TimerThread.

===============================================================================
12/30/2009 - jTDS 1.2.5 released
===============================================================================

Changes from jTDS 1.2.4
=======================

12/30/2009 - Holger Rehn
 o Corrected bug [2900139], NoClassDefFoundError with C3P0.
 o Corrected bugs [2856350], [2898905], problems with JDBC4 stubs in GlassFish. 
 o Modified build process to remove JDBC4 stubs, feature request [2905814].

12/09/2009 - Holger Rehn
 o Updated JCIFS to version 1.3.12
 o Corrected bug [2911266], Default response timeout of 30 seconds if using
   named pipes via JCIFS.

12/06/2009 - Holger Rehn
 o Implemented PreparedStatement.toString(), feature request [2909009].

11/05/2009 - Holger Rehn
 o Corrected bug [2892493], NullPointException when receiving character NULL
   values (MS SQL Server 7.0 and later).

11/04/2009 - Holger Rehn 
 o Corrected bug [2891775], fix for [2340241] has broken Java 1.3 compatibility.

10/22/2009 - Holger Rehn
 o Corrected bug [2883066], Numeric overflow in conversion BigInteger/BIGINT.
